crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__apply_patch_manual_flow_history_approved.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: lines_to_single_string(&approved_lines)
---
• Added foo.txt (+1 -0)
    1 +hello
