crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__chat_screen_exec_and_status_layout_vt100_snapshot.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: term.backend().vt100().screen().contents()
---








• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Explored
  └ Search Change Approved
    Read diff_render.rs
               ██████  ██    ██ ████████ ██████  ██████  ██    ██
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██ 
              ██    ██ ██    ██    ██    ██████ ██    ██   ████  
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██ 
               ██████   ██████     ██    ██      ██████  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant



• Investigating rendering code (0s • esc to interrupt)

D:\Works\savfox-ai\savfox\crates\tui                     gpt-5.2-savfox OpenAI
────────────────────────────────────────────────────────────────────────────────
❯ Summarize recent commits
────────────────────────────────────────────────────────────────────────────────
  tab to queue message                                       100% context left
