crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__chat_screen_markdown_code_blocks_vt100_snapshot.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: term.backend().vt100().screen().contents()
---



































•     -- Indented code block (4 spaces)
      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ```sh
  printf 'fenced within fenced\n'
  ```

  {
    // comment allowed in jsonc
    "path": "C:\\Program Files\\App",
    "regex": "^foo.*(bar)?$"
  }
