crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__chat_screen_tall.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: term.backend().vt100().screen().contents()
---
               ██████    ████   ██    ██ ██████  ██████  ██    ██
              ██        ██  ██  ██    ██ ██     ██    ██  ██  ██ 
               ██████  ████████ ██    ██ █████  ██    ██   ████  
                    ██ ██    ██  ██  ██  ██     ██    ██  ██  ██ 
              ██████   ██    ██   ████   ██      ██████  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant



• Working (0s • esc to interrupt)

  ↳ Hello, world! 0
  ↳ Hello, world! 1
  ↳ Hello, world! 2
  ↳ Hello, world! 3
  ↳ Hello, world! 4
  ↳ Hello, world! 5
D:\Works\savfox-ai\savfox\crates\tui                      gpt-5.2-codex OpenAI
────────────────────────────────────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? for shortcuts
────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                                            100% context left
